--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "PutnamBench"]
 	path = PutnamBench
-	url = https://github.com/RedPRL/PutnamBench
+	url = https://github.com/trishullab/PutnamBench
 [submodule "miniF2F"]
 	path = miniF2F
 	url = https://github.com/openai/miniF2F
