--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,6 @@
 	url = https://github.com/trishullab/PutnamBench
 [submodule "miniF2F"]
 	path = miniF2F
-	url = https://github.com/openai/miniF2F
+	# NOTE: this project requires the Lean4 port of MiniF2F.
+	# The upstream openai/miniF2F repo is Lean3 and has a different history.
+	url = https://github.com/rahul3613/miniF2F-lean4
